--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.2.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.0",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-toastify": "^9.1.3"
   },
