--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-query": "^3.39.3",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
