--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "alpinejs": "^3.12.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
     "eslint": "8.42.0",
@@ -27,7 +28,8 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "tw-elements": "^1.0.0-beta2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
